Fix stretched team icons in both directions

--- a/src/app/scoreboard/scoreboard.component.scss
+++ b/src/app/scoreboard/scoreboard.component.scss
@@ -4,7 +4,7 @@
 
 .team-icon {
   position: relative;
-  width: 38.34px;
+  max-width: 38.34px;
   max-height: 38.34px;
 }
 
