--- a/src/app/topscore/topscore.component.scss
+++ b/src/app/topscore/topscore.component.scss
@@ -122,7 +122,7 @@
 
 .team-image {
     position: relative;
-    width: 38.34px;
+    max-width: 38.34px;
     max-height: 38.34px;
 }
 
